till EXP 10 done

--- a/WebContent/CsvtuRegistration.html
+++ b/WebContent/CsvtuRegistration.html
@@ -5,22 +5,16 @@
 <title>Insert title here</title>
 </head>
 <body>
-	<center><h2>Registration Page</h2>
-	<form method="POST" action="register">
+	<center><h2>Registration Page</h2></center>
+	<form method="POST" action="csvturegistration">
 	Please Register:-
 	<br>
-	Name: <input type="text" name="name" />
+	Name: <input type="text" name="username" />
 	<br>
 	password: <input type="password" name="password" />
 	<br>
-	email: <input type="email" name="email" />
-	<br>
-	Phone No.: <input type="text" name="phone" />
-	<br>
+	Security Question: <input type="text" name="security" />
 	<input type="submit" value="Sign Up">
-	
 	</form>
-	<a href="Login.html">Login Page</a>  
-	</center>
 </body>
 </html>
