--- a/WebContent/Logedinpage.html
+++ b/WebContent/Logedinpage.html
@@ -1,16 +1,12 @@
-<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
-    pageEncoding="ISO-8859-1"%>
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN" "http://www.w3.org/TR/html4/loose.dtd">
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
-<title>Hello Page on java</title>
+<title>Insert title here</title>
 </head>
 <body>
-<% 
-out.print("<center><b><h1>Hello Java</h1></b></center>");
-
-%>
+	<h1>This is loged in page</h1>
+	<a href="listusers">view employees</a>
 
 </body>
 </html>
